--- a/component/menumobile.html
+++ b/component/menumobile.html
@@ -1,4 +1,4 @@
-<a href="#" class="flex flex-col menu-mobile__item">
+<a href="../in" class="flex flex-col menu-mobile__item">
     <img src="./img/icon/logomenu-mb.svg" alt="">
     <p>Trang chủ</p>
 </a>
@@ -9,111 +9,111 @@
 <a href="#" class="flex flex-col menu-mobile__item">
     <img src="./img/icon/mes-mb.svg" alt="">
     <p>Messenger</p>
-    </ahref=class=>
-    <a href="#" class="flex flex-col menu-mobile__item">
-        <img src="./img/icon/location-mb.svg" alt="">
-        <p>Google Maps</p>
-    </a>
-    <a href="#" class="flex flex-col menu-mobile__item">
-        <img src="./img/icon/user-mb.svg" alt="">
-        <p>Về Atisha</p>
-    </a>
-    <div id="menuMobileButton" class="flex flex-col menu-mobile__item">
-        <img src="./img/icon/bars-mb.svg" alt="">
-        <p>Danh mục</p>
-    </div>
-    <div class="menu-list__mobile bg-primary flex flex-col">
-        <div class="menu-root">
-            <div class="menu-item flex flex-col flex">
-                <a href="#">Câu chuyện Atisha</a>
-                <div class="submenu bg-white flex flex-col">
-                    <div class="flex"><a href="#">Về chúng tôi</a></div>
-                    <div class="flex"><a href="#">Giá trị doanh nghiệp</a></div>
-                    <div class="flex"><a href="#">Giá trị cốt lõi</a></div>
-                    <div class="flex"><a href="#">Sản phẩm kinh doanh</a></div>
-                    <div class="flex"><a href="#">Quy trình sản xuất bền vững</a></div>
-                </div>
+</a>
+<a href="https://maps.app.goo.gl/hXTSkuvFrRy5nPnw5" target="_blank" class="flex flex-col menu-mobile__item">
+    <img src="./img/icon/location-mb.svg" alt="">
+    <p>Google Maps</p>
+</a>
+<a href="../intro.html" class="flex flex-col menu-mobile__item">
+    <img src="./img/icon/user-mb.svg" alt="">
+    <p>Về Atisha</p>
+</a>
+<div id="menuMobileButton" class="flex flex-col menu-mobile__item">
+    <img src="./img/icon/bars-mb.svg" alt="">
+    <p>Danh mục</p>
+</div>
+<div class="menu-list__mobile bg-primary flex flex-col">
+    <div class="menu-root">
+        <div class="menu-item flex flex-col flex">
+            <a href="#">Câu chuyện Atisha</a>
+            <div class="submenu bg-white flex flex-col">
+                <div class="flex"><a href="../intro.html">Về chúng tôi</a></div>
+                <div class="flex"><a href="../intro.html">Giá trị doanh nghiệp</a></div>
+                <div class="flex"><a href="../intro.html">Giá trị cốt lõi</a></div>
+                <div class="flex"><a href="../intro.html">Sản phẩm kinh doanh</a></div>
+                <div class="flex"><a href="../intro.html">Quy trình sản xuất bền vững</a></div>
             </div>
+        </div>
 
-            <div class="menu-item flex flex-col flex">
-                <a href="#">Kombucha</a>
-                <div class="submenu bg-white flex flex-col">
-                    <div class="flex"><a href="#">Kombucha Rosé</a></div>
-                    <div class="flex"><a href="#">Kombucha Apple</a></div>
-                    <div class="flex"><a href="#">Kombucha Pear</a></div>
-                    <div class="flex"><a href="#">Kombucha Banana</a></div>
-                    <div class="flex"><a href="#">Kombucha Berries</a></div>
-                    <div class="flex"><a href="#">Kombucha Peach</a></div>
-                </div>
+        <div class="menu-item flex flex-col flex">
+            <a href="#">Kombucha</a>
+            <div class="submenu bg-white flex flex-col">
+                <div class="flex"><a href="../product.html">Kombucha Rosé</a></div>
+                <div class="flex"><a href="../product.html">Kombucha Apple</a></div>
+                <div class="flex"><a href="../product.html">Kombucha Pear</a></div>
+                <div class="flex"><a href="../product.html">Kombucha Banana</a></div>
+                <div class="flex"><a href="../product.html">Kombucha Berries</a></div>
+                <div class="flex"><a href="../product.html">Kombucha Peach</a></div>
             </div>
+        </div>
 
-            <div class="menu-item flex flex-col flex">
-                <a href="#">Mật chuối</a>
-                <div class="submenu bg-white flex flex-col">
-                    <div class="flex"><a href="#">Mật chuối Delta</a></div>
-                    <div class="flex"><a href="#">Mật chuối Highland</a></div>
-                    <div class="flex"><a href="#">Mật chuối ủ nhiều năm</a></div>
-                </div>
+        <div class="menu-item flex flex-col flex">
+            <a href="#">Mật chuối</a>
+            <div class="submenu bg-white flex flex-col">
+                <div class="flex"><a href="../product.html">Mật chuối Delta</a></div>
+                <div class="flex"><a href="../product.html">Mật chuối Highland</a></div>
+                <div class="flex"><a href="../product.html">Mật chuối ủ nhiều năm</a></div>
             </div>
+        </div>
 
-            <div class="menu-item flex flex-col flex">
-                <a href="#">Juice</a>
-                <div class="submenu bg-white flex flex-col">
-                    <div class="flex"><a href="#">Nước ép chuối</a></div>
-                    <div class="flex"><a href="#">Nước ép dâu tây</a></div>
-                    <div class="flex"><a href="#">Nước bù khoáng</a></div>
-                </div>
+        <div class="menu-item flex flex-col flex">
+            <a href="#">Juice</a>
+            <div class="submenu bg-white flex flex-col">
+                <div class="flex"><a href="../product.html">Nước ép chuối</a></div>
+                <div class="flex"><a href="../product.html">Nước ép dâu tây</a></div>
+                <div class="flex"><a href="../product.html">Nước bù khoáng</a></div>
             </div>
+        </div>
 
-            <div class="menu-item flex flex-col flex">
-                <a href="#">Bỏng gạo dinh dưỡng</a>
-                <div class="submenu bg-white flex flex-col">
-                    <div class="flex"><a href="#">Thanh dinh dưỡng</a></div>
-                    <div class="flex"><a href="#">Bột bỏng gạo dinh dưỡng</a></div>
-                </div>
+        <div class="menu-item flex flex-col flex">
+            <a href="#">Bỏng gạo dinh dưỡng</a>
+            <div class="submenu bg-white flex flex-col">
+                <div class="flex"><a href="../product.html">Thanh dinh dưỡng</a></div>
+                <div class="flex"><a href="../product.html">Bột bỏng gạo dinh dưỡng</a></div>
             </div>
+        </div>
 
-            <div class="menu-item flex flex-col flex">
-                <a href="#">Sen</a>
-                <div class="submenu bg-white flex flex-col">
-                    <div class="flex"><a href="#">Bột sen dinh dưỡng</a></div>
-                    <div class="flex"><a href="#">Bột sen chuối</a></div>
-                </div>
+        <div class="menu-item flex flex-col flex">
+            <a href="#">Sen</a>
+            <div class="submenu bg-white flex flex-col">
+                <div class="flex"><a href="../product.html">Bột sen dinh dưỡng</a></div>
+                <div class="flex"><a href="../product.html">Bột sen chuối</a></div>
             </div>
+        </div>
 
-            <div class="menu-item flex flex-col flex">
-                <a href="#">Gia vị</a>
-                <div class="submenu bg-white flex flex-col">
-                    <div class="flex"><a href="#">Dầu hào chay từ chuối</a></div>
-                    <div class="flex"><a href="#">Nước tương chay</a></div>
-                    <div class="flex"><a href="#">Giấm Balsamic</a></div>
-                </div>
+        <div class="menu-item flex flex-col flex">
+            <a href="#">Gia vị</a>
+            <div class="submenu bg-white flex flex-col">
+                <div class="flex"><a href="../product.html">Dầu hào chay từ chuối</a></div>
+                <div class="flex"><a href="../product.html">Nước tương chay</a></div>
+                <div class="flex"><a href="../product.html">Giấm Balsamic</a></div>
             </div>
+        </div>
 
-            <div class="menu-item flex flex-col flex">
-                <a href="#">Cà phê</a>
-                <div class="submenu bg-white flex flex-col">
-                    <div class="flex"><a href="#">Robusta nhân xanh</a></div>
-                    <div class="flex"><a href="#">Arabica nhân xanh</a></div>
-                </div>
+        <div class="menu-item flex flex-col flex">
+            <a href="#">Cà phê</a>
+            <div class="submenu bg-white flex flex-col">
+                <div class="flex"><a href="../product.html">Robusta nhân xanh</a></div>
+                <div class="flex"><a href="../product.html">Arabica nhân xanh</a></div>
             </div>
+        </div>
 
-            <div class="menu-item flex flex-col flex">
-                <a href="#">Chăm sóc da & làm đẹp</a>
-                <div class="submenu bg-white flex flex-col">
-                    <div class="flex"><a href="#">Chăm sóc tóc và da đầu</a></div>
-                    <div class="flex"><a href="#">Sữa rửa mặt</a></div>
-                    <div class="flex"><a href="#">Kem dưỡng da, dưỡng ẩm</a></div>
-                    <div class="flex"><a href="#">Tinh chất</a></div>
-                    <div class="flex"><a href="#">Chăm sóc cơ thể</a></div>
-                </div>
+        <div class="menu-item flex flex-col flex">
+            <a href="#">Chăm sóc da & làm đẹp</a>
+            <div class="submenu bg-white flex flex-col">
+                <div class="flex"><a href="../product.html">Chăm sóc tóc và da đầu</a></div>
+                <div class="flex"><a href="../product.html">Sữa rửa mặt</a></div>
+                <div class="flex"><a href="../product.html">Kem dưỡng da, dưỡng ẩm</a></div>
+                <div class="flex"><a href="../product.html">Tinh chất</a></div>
+                <div class="flex"><a href="../product.html">Chăm sóc cơ thể</a></div>
             </div>
+        </div>
 
-            <div class="menu-item flex flex-col flex">
-                <a href="#">Dinh dưỡng & sức khỏe</a>
-                <div class="submenu bg-white flex flex-col">
-                    <div class="flex"><a href="#">Phương pháp dinh dưỡng</a></div>
-                </div>
+        <div class="menu-item flex flex-col flex">
+            <a href="#">Dinh dưỡng & sức khỏe</a>
+            <div class="submenu bg-white flex flex-col">
+                <div class="flex"><a href="#">Phương pháp dinh dưỡng</a></div>
             </div>
         </div>
     </div>
+</div>
