--- a/css/custom/custom.css
+++ b/css/custom/custom.css
@@ -27,6 +27,7 @@
     transition: all 0.6s ease;
 }
 
+.pagenotfound-container a:hover,
 .job-filter__btn:hover,
 .job-card:hover,
 .header-function__contact:hover,
@@ -638,13 +639,8 @@
     font-size: calc(var(--font-size-base) + 2px);
 }
 
-.product-type {
-    gap: 20px;
-    flex-wrap: wrap;
-}
 
 .product-type__item {
-    flex: 0 0 calc(100% / 6 - 5px);
     padding: 2vw;
     gap: 10px;
 }
@@ -2134,7 +2130,7 @@ footer {
 .product-container__info,
 .product-container__image {
     gap: 20px;
-    flex: 0 0 65%;
+    flex: 0 0 60%;
     padding: 20px;
     border-radius: 10px;
 }
@@ -2159,8 +2155,6 @@ footer {
     border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
-.product-image__side {}
-
 .product-image__item {
     width: 61px;
     height: 61px;
@@ -2177,19 +2171,81 @@ footer {
 }
 
 .product-container__info {
-    flex: 1 1 35%;
+    flex: 1 1 40%;
 }
 
-.product-container__price {}
+.product-container__price {
+    width: fit-content;
+    border-radius: 10px;
+    border: 1px solid var(--secondary-color);
+    padding: 10px 20px;
+}
+
+.product-price b{
+    font-size: calc(var(--font-size-base) * 2);
+    color: var(--secondary-color);
+}
+
+.product-price span{
+    text-decoration: line-through;
+}
+
+.product-price span,
+.product-container__price p{
+    font-size: calc(var(--font-size-base) - 2px);
+}
 
 .product-price {}
 
-.product-container__combo {}
+.all-combo,
+.product-container__combo {
+    gap: 20px;
+}
 
-.all-combo {}
+.all-combo{
+    flex-wrap: wrap;
+}
 
-.combo-item {}
+.combo-item {
+    background-color: var(--white-color);
+    border: 1px solid var(--black-color);
+    border-radius: 10px;
+    padding: 20px 30px;
+}
 
-.product-btn {}
+.product-container__info b,
+.product-container__info p,
+.combo-item p{
+    font-size: calc( var(--font-size-base) + 2px);
+}
+
+.combo-item p{
+    font-weight: bold;
+}
+
+.combo-item.active{
+    border: 1px solid var(--secondary-color);
+}
+
+.combo-item.active p{
+    color: var(--secondary-color);
+}
+
+.product-btn {
+    background-color: var(--secondary-color);
+    border-radius: 10px;
+    padding: 15px 30px;
+    color: var(--white-color);
+    width: fit-content;
+}
 
 .product-icon {}
+
+/* css 404 page */
+.pagenotfound-container a{
+    padding: 15px 30px;
+    border-radius: 10px;
+    background-color: var(--secondary-color);
+    color: var(--white-color);
+    transition: all 0.4s ease;
+}
