--- a/css/custom/responsive.css
+++ b/css/custom/responsive.css
@@ -120,6 +120,18 @@
 
 }
 
+@media screen and (min-width: 769px) {
+    .product-type {
+        gap: 20px;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .product-type__item {
+        flex: 0 0 calc(100% / 6 - 5px);
+    }
+}
+
 @media screen and (max-width: 768px) {
     .news-top__container {
         flex-direction: column;
@@ -130,6 +142,20 @@
         max-height: 150px;
         height: 100%;
         width: 100%;
+    }
+
+    .product-type{
+        width: 1000px;
+        flex-wrap: wrap;
+    }
+
+    .product-type__item {
+        flex: 0 0 200px;
+        scroll-snap-align: start;
+    }
+
+    .product-container__mb{
+        overflow-x: auto;
     }
 
     .news__small .news__image {
@@ -177,6 +203,7 @@
         color: var(--white-color);
     }
 
+    /* .product-container, */
     .feedback-item {
         flex-direction: column;
     }
@@ -198,7 +225,8 @@
     .product-page__item {
         width: calc(100% / 3 - 15px);
     }
-    .job-card{
+
+    .job-card {
         width: 100%;
     }
 }
