--- a/component/knowledge.html
+++ b/component/knowledge.html
@@ -24,4 +24,9 @@
             <p>Đây là quy trình sản xuất Mật chuối từ trang trại đến xưởng của Jan’slenmen.</p>
         </a>
     </div>
+    <div class="container-xs flex center-hor">
+        <a class="flex btn-readmore__new center-ver news-readmore">
+            Xem thêm
+        </a>
+    </div>
 </div>
