--- a/css/custom/responsive.css
+++ b/css/custom/responsive.css
@@ -253,6 +253,11 @@
         flex-direction: column;
     }
 
+    .product-type {
+        width: 950px;
+    } 
+
+    .product-type__item,
     .product-item {
         flex: 0 0 180px;
         scroll-snap-align: start;
