--- a/css/custom/custom.css
+++ b/css/custom/custom.css
@@ -301,7 +301,7 @@
     width: 100vw;
     padding: 10px 0;
     background: #fff;
-    max-height: 0;
+    min-height: 0;
     opacity: 0;
     transform: translateY(-10px);
     overflow: hidden;
@@ -314,7 +314,7 @@
 }
 
 .menu-list__mobile.active {
-    max-height: 80vh;
+    min-height: 85vh;
     opacity: 1;
     transform: translateY(0);
 }
