--- a/css/custom/custom.css
+++ b/css/custom/custom.css
@@ -664,6 +664,9 @@
 .product-type__item img {
     aspect-ratio: 1 / 1;
     border-radius: 10px;
+    object-fit: cover;
+    width: 100%;
+    object-position: center;
 }
 
 .product-container {
@@ -2361,6 +2364,6 @@ footer {
     left: 20px;
 }
 
-.btn-readmore__new{
+.btn-readmore__new {
     margin-top: 20px;
 }
