--- a/css/custom/custom.css
+++ b/css/custom/custom.css
@@ -1560,6 +1560,8 @@ ul {
 .feedback-container {
     padding: 80px 0px 80px;
     gap: 30px;
+    max-height: 400px;
+    overflow:hidden;
 }
 
 .feedback-item {
