--- a/css/custom/custom.css
+++ b/css/custom/custom.css
@@ -354,7 +354,7 @@
 .knowledge-container>div:first-child img,
 .news-container>div:first-child img,
 .intro-content img:nth-child(2) {
-    /* max-height: 31px; */
+    max-height: 31px;
     width: auto;
     height: 100%;
 }
