--- a/css/custom/responsive.css
+++ b/css/custom/responsive.css
@@ -199,6 +199,10 @@
         width: 100%;
         margin-left: 2px;
     }
+
+    .product-container{
+        flex-direction: column;
+    }
 }
 
 @media screen and (max-width : 700px) {
