--- a/component/menumobile.html
+++ b/component/menumobile.html
@@ -24,7 +24,10 @@
 </div>
 <div class="menu-list__mobile bg-primary flex flex-col">
     <div class="menu-root">
-        <div class="menu-item flex flex-col flex">
+        <div class="menu-item flex clone-menu__container">
+            <p class="btn-clone__menu">⨉</p>
+        </div>
+        <div class="menu-item flex-col flex">
             <a href="#">Câu chuyện Atisha</a>
             <div class="submenu bg-white flex flex-col">
                 <div class="flex"><a href="../intro.html">Về chúng tôi</a></div>
@@ -35,7 +38,7 @@
             </div>
         </div>
 
-        <div class="menu-item flex flex-col flex">
+        <div class="menu-item flex-col flex">
             <a href="#">Kombucha</a>
             <div class="submenu bg-white flex flex-col">
                 <div class="flex"><a href="../product.html">Kombucha Rosé</a></div>
@@ -47,7 +50,7 @@
             </div>
         </div>
 
-        <div class="menu-item flex flex-col flex">
+        <div class="menu-item flex-col flex">
             <a href="#">Mật chuối</a>
             <div class="submenu bg-white flex flex-col">
                 <div class="flex"><a href="../product.html">Mật chuối Delta</a></div>
@@ -56,7 +59,7 @@
             </div>
         </div>
 
-        <div class="menu-item flex flex-col flex">
+        <div class="menu-item flex-col flex">
             <a href="#">Juice</a>
             <div class="submenu bg-white flex flex-col">
                 <div class="flex"><a href="../product.html">Nước ép chuối</a></div>
@@ -65,7 +68,7 @@
             </div>
         </div>
 
-        <div class="menu-item flex flex-col flex">
+        <div class="menu-item flex-col flex">
             <a href="#">Bỏng gạo dinh dưỡng</a>
             <div class="submenu bg-white flex flex-col">
                 <div class="flex"><a href="../product.html">Thanh dinh dưỡng</a></div>
@@ -73,7 +76,7 @@
             </div>
         </div>
 
-        <div class="menu-item flex flex-col flex">
+        <div class="menu-item flex-col flex">
             <a href="#">Sen</a>
             <div class="submenu bg-white flex flex-col">
                 <div class="flex"><a href="../product.html">Bột sen dinh dưỡng</a></div>
@@ -81,7 +84,7 @@
             </div>
         </div>
 
-        <div class="menu-item flex flex-col flex">
+        <div class="menu-item flex-col flex">
             <a href="#">Gia vị</a>
             <div class="submenu bg-white flex flex-col">
                 <div class="flex"><a href="../product.html">Dầu hào chay từ chuối</a></div>
@@ -90,7 +93,7 @@
             </div>
         </div>
 
-        <div class="menu-item flex flex-col flex">
+        <div class="menu-item flex-col flex">
             <a href="#">Cà phê</a>
             <div class="submenu bg-white flex flex-col">
                 <div class="flex"><a href="../product.html">Robusta nhân xanh</a></div>
@@ -98,7 +101,7 @@
             </div>
         </div>
 
-        <div class="menu-item flex flex-col flex">
+        <div class="menu-item flex-col flex">
             <a href="#">Chăm sóc da & làm đẹp</a>
             <div class="submenu bg-white flex flex-col">
                 <div class="flex"><a href="../product.html">Chăm sóc tóc và da đầu</a></div>
@@ -109,11 +112,14 @@
             </div>
         </div>
 
-        <div class="menu-item flex flex-col flex">
+        <div class="menu-item flex-col flex">
             <a href="#">Dinh dưỡng & sức khỏe</a>
             <div class="submenu bg-white flex flex-col">
                 <div class="flex"><a href="#">Phương pháp dinh dưỡng</a></div>
             </div>
+        </div>
+        <div class="menu-item__exception flex-col flex">
+            <a href="#">Kiến thức</a>
         </div>
     </div>
 </div>
