--- a/css/custom/responsive.css
+++ b/css/custom/responsive.css
@@ -62,6 +62,10 @@
     .job-filter__location {
         width: 100%;
     }
+
+    .menu-item__exception{
+        display: flex;
+    }
 }
 
 @media screen and (max-width: 900px) {
@@ -200,9 +204,9 @@
         margin-left: 2px;
     }
 
-    .product-container{
+    /* .product-container{
         flex-direction: column;
-    }
+    } */
 }
 
 @media screen and (max-width : 700px) {
