--- a/component/header.html
+++ b/component/header.html
@@ -9,7 +9,16 @@
                 <img src="./img/icon/search.webp" alt="Search" />
             </button>
         </div>
-        <a href="../blog.html" class="header-function__blog">Blog</a>
+        <div class="header-newsandknowledge__container">
+            <p class="flex header-function__blog">
+                Bản tin
+                <img src="../img/icon/chevron-down-red.svg" alt="">
+            </p>
+            <div class=" flex-col header-newsandknowledge__content">
+                <a href="../blog.html">Blog</a>
+                <a href="../knowledge.html">Kiến thức</a>
+            </div>
+        </div>
         <a href="../contact.html" class="header-function__contact">Liên hệ</a>
     </div>
 </div>
