--- a/component/menumobile.html
+++ b/component/menumobile.html
@@ -121,5 +121,11 @@
         <div class="menu-item__exception flex-col flex">
             <a href="#">Kiến thức</a>
         </div>
+         <div class="menu-item__exception flex-col flex">
+            <a href="#">Tin tức</a>
+        </div>
+         <div class="menu-item__exception flex-col flex">
+            <a href="#">Liên hệ</a>
+        </div>
     </div>
 </div>
